--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
+# Environment
 .env
+/.env
+
+# Dependencias auto-generadas
+annotated_types/
+venv/
+
 # Python
 __pycache__/
 *.py[cod]
 *.pyo
 *.pyd
-*.env
-venv/
-.env
 *.sqlite3
 *.db
 *.log
@@ -20,22 +24,12 @@ venv/
 # Node.js / MiniWorks
 node_modules/
 dist/
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # Docker
-*.env
 docker-compose.override.yml
-
-# Python cache
-*.pyc
-*.pyo
-*.pyd
-__pycache__/
-*.sqlite
-*.db
 
 # Misc
 .idea/
